c4prj2_input/grade.txt
Grading at Thu Oct  3 03:10:35 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:9:3: error: ‘else’ without a previous ‘if’
   else{
   ^
Compilation of future.c failed

Overall Grade: F
